--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "ConexaoPadrao": "COLOCAR SUA CONNECTION STRING AQUI"
+    "ConexaoPadrao": "Server=localhost\\sqlserver; Initial Catalog=Organizador; Integrated Security=True; trustServerCertificate=True"
   }
 }
